# Mystic

./: .env.example  .gitignore  .vercelignore  CODEX_PROMPT.md  DESIGN.md  README.md  main.py  mystic_requirements_checklist.md  mystic_v0_1_architecture_canvas.md  pyproject.toml  requirements-axolotl.txt  requirements-discord.txt  requirements-training.txt  requirements-unsloth.txt  vercel.json
api/: index.py
cloudflare/: mystic_public_gateway_worker.js
configs/: model_config.yaml  models.json  mystic_models.yaml  router_config.yaml  training_raven.json
docs/: cloudflare_named_tunnel_template.md  gemini_app_ui_bridge_compliance.md  mystic_lab_3d_virtual_lab.md  mystic_lab_domains.md  mystic_lab_engine_adapter_layer.md  mystic_lab_engine_runtime.md  mystic_lab_os.md  mystic_lab_provider_connect.md  mystic_lab_roadmap.md  oauth_capability_recovery.md  requirements_alignment.md  training_setup.md
mystic/: __init__.py  discord_dashboard.py  env_loader.py  execution_history.py  final_answer_verifier.py  jsonl_loop.py  llm_client.py  parsers.py  prompts.py  raven_compare.py  raven_dataset_builder.py  raven_training.py  research_lab.py  schema.py
mystic_data/: README.md
scripts/: __init__.py  bootstrap_architecture_train_ready.py  bootstrap_training_workspace.py  build_ingestion_registry.py  build_training_manifests.py  check_chatgpt_action_discovery_compatibility.py  check_chatgpt_remote_mcp_readiness.py  check_engine_queue_lifecycle.py  check_engine_runtime.py  check_hf_auth.py  check_public_backend_origin.py  check_raven_training_readiness.py  export_dataset.py  (+62 more)
(+412 files in other folders)
