[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mystic"
version = "0.1.0"
description = "Local-first multi-specialist research intelligence scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]
discord = [
  "discord.py>=2.4.0",
]

[project.scripts]
mystic = "mystic.cli.main:main"

[tool.setuptools.packages.find]
include = ["mystic*"]
