[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mystic"
version = "0.1.0"
description = "Local-first multi-specialist research intelligence scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
api = [
  "uvicorn>=0.30.0",
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]
discord = [
  "discord.py>=2.4.0",
]

[project.scripts]
mystic = "mystic.cli.main:main"

[tool.vercel]
entrypoint = "mystic.app.main:app"

[tool.setuptools.packages.find]
include = ["mystic*"]
